# ROS-image-stitching

./: README.md
openCV_stitching/: CMakeLists.txt  package.xml
openCV_stitching/include/openCV_stitching/: image_stitcher.h
openCV_stitching/src/: webcam1_pub.cpp  webcam2_pub.cpp  webcam_stitching.cpp
